# mc-infos

./: Cargo.toml
src/: lib.rs  main.rs
src/models/: user.rs
src/routes/: mod.rs  routes.rs
src/routes/v1/: mod.rs  user.rs
src/routes/v1/preview/: cape.rs  head2d.rs  head3d.rs  mod.rs
src/routes/v1/user/: cape.rs  mod.rs  profile.rs  skin.rs
src/services/: mod.rs  preview_service.rs  user_service.rs
src/utils/: get_image.rs
