[package]
name = "mc-infos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
watch = "0.2.3"
reqwest = { version = "0.11.6", features = ["json"] }
serde_json = "1.0.105"
base64 = "0.21.2"
serde = { version = "1.0.104", features = ["derive"] }